Allow to set Boolean properties globally. Fixes bug #2841625.
git-svn-id: svn+ssh://svn.code.sf.net/p/cmusphinx/code/trunk/sphinx4@9271 94700074-3cef-4d97-a70e-9c8c206c02f5